[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.18.0" }
serde = { version = "1.0", default-features = false }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", version = "0.1.0-alpha.6", tag = "v0.1.0-alpha.6" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "0.1.0-alpha.6", tag = "v0.1.0-alpha.6" }
reth-rlp = { git = "https://github.com/paradigmxyz/reth", version = "0.1.0-alpha.6", tag = "v0.1.0-alpha.6" }
revm-primitives = "=1.1.2"
cita_trie = { version = "4.0.0", path = "../cita-trie" }
hasher = "0.1.4"
serde_json = "1.0.105"
trie-core = { path = "../core" }