[package]
name = "receipts_root_and_product_tree"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.18.0", default-features = false, features = ["std"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
trie-core = { path = "../../core" }
hasher = "0.1.4"


